Fix for helptext overlap on input boxes.

--- a/kalite/static/css/khan-lite.css
+++ b/kalite/static/css/khan-lite.css
@@ -411,7 +411,7 @@ li .progress-circle {
     font-size: .85em;
     display: block;
     position: relative;
-    left: 135px;
+    float: right;
     top: -3px;
 }
 
